# gpu-programming-samples

./: .gitignore
cuda_samples/GEMM/: CMakeLists.txt  build_and_debug.sh  build_and_run.sh  sgemm_main.cu
cuda_samples/GEMM/src/: kernel.cuh  runner.cu  runner.cuh  utils.cuh
cuda_samples/GEMM/src/kernels/: sgemm_v1_thread_block_tile.cuh  sgemm_v2_optimized.cuh  sgemm_v3_optimized_A100.cuh
cuda_samples/concepts_and_techniques/example_for_start/: kernel.cu
cuda_samples/concepts_and_techniques/shared_memory/: test_lds128.cu  test_lds64.cu
cuda_samples/example_for_start/: CMakeLists.txt  example.cpp  kernel.h
cuda_samples/interview/: dtype_utils.cuh  layer_norm.cuh  reduction.cuh  sgemm.cu  softmax.cu  utils.cuh
triton_samples/: flash_attention_v2_impl.py
